--- a/client/index.html
+++ b/client/index.html
@@ -79,22 +79,17 @@
                     </div>
                 </div>
 
-                <!-- Leaderboard -->
-                <div class="leaderboard-section" id="leaderboard-section">
-                    <h2>Leaderboard des fyots</h2>
-                    <table class="leaderboard-table">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Fyot</th>
-                                <th>Kills</th>
-                                <th>Sadikoi</th>
-                            </tr>
-                        </thead>
-                        <tbody id="leaderboard-body"></tbody>
-                    </table>
-                    <div id="leaderboard-empty" class="leaderboard-empty hidden">Pas encore de kills enregistrés.</div>
-                    <div id="leaderboard-error" class="leaderboard-error hidden">Impossible de charger le leaderboard pour le moment.</div>
+                <!-- Trombinoscope -->
+                <div class="trombi-section" id="trombi-section">
+                    <h2>Trombinoscope</h2>
+                    <div class="trombi-wrapper">
+                        <div id="trombi-list" class="trombi-list"></div>
+                        <div id="trombi-details" class="trombi-details">
+                            <p class="trombi-placeholder">Sélectionne un joueur pour découvrir son profil.</p>
+                        </div>
+                    </div>
+                    <p id="trombi-empty" class="trombi-empty hidden">Pas encore de joueurs à afficher.</p>
+                    <p id="trombi-error" class="trombi-error hidden">Impossible de charger le trombinoscope pour le moment.</p>
                 </div>
 
                     <div class="admin-overview hidden" id="admin-overview">
