--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
                 <div class="profile-photos">
                     <div id="player-person-photo-container" class="photo-container photo-small">
                         <img id="player-person-photo" src="" alt="Photo du joueur" class="player-photo">
+                        <img src="./client/img/mug_shot.png" alt="" class="player-mugshot-overlay" aria-hidden="true">
                     </div>
                 </div>
             </div>
