--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,12 @@
                 <!-- Trombinoscope -->
                 <div class="trombi-section" id="trombi-section">
                     <h2>Trombinoscope</h2>
+                    <div class="trombi-categories">
+                        <button type="button" class="trombi-category-btn active" data-category="all">Tous</button>
+                        <button type="button" class="trombi-category-btn" data-category="alive">Vivants</button>
+                        <button type="button" class="trombi-category-btn" data-category="dead">Morts</button>
+                        <button type="button" class="trombi-category-btn" data-category="admin">Admins</button>
+                    </div>
                     <div class="trombi-wrapper">
                         <div id="trombi-list" class="trombi-list"></div>
                         <div id="trombi-details" class="trombi-details">
