--- a/client/index.html
+++ b/client/index.html
@@ -85,10 +85,11 @@
                     <h2>Trombinoscope</h2>
                     <div class="trombi-categories">
                         <button type="button" class="trombi-category-btn active" data-category="all">Tous</button>
+                        <button type="button" class="trombi-category-btn" data-category="admin" title="(À contacter en cas de non gérance)">Admins</button>
                         <button type="button" class="trombi-category-btn" data-category="alive">Vivants</button>
                         <button type="button" class="trombi-category-btn" data-category="dead">Morts</button>
-                        <button type="button" class="trombi-category-btn" data-category="admin">Admins</button>
                     </div>
+                    <p class="trombi-category-hint" id="admin-category-hint">(À contacter en cas de non gérance)</p>
                     <div class="trombi-wrapper">
                         <div id="trombi-list" class="trombi-list"></div>
                         <div id="trombi-details" class="trombi-details">
