--- a/client/index.html
+++ b/client/index.html
@@ -67,9 +67,9 @@
                     <p>🎉 Le killer est terminé bouuuh... mais la strrr continuee <span class="small-text">(manque toujours 1 pour CD)</span> 🎉</p>
                 </div>
 
-                <!-- Podium des vainqueurs -->
+                <!-- Podium des survivants -->
                 <div class="podium-section hidden" id="podium-section">
-                    <h2>🏆 Podium des Vainqueurs 🏆</h2>
+                    <h2>🏆 Podium des Survivants 🏆</h2>
                     <div class="podium-container">
                         <div class="podium-place podium-2" id="podium-place-2">
                             <div class="podium-rank">2</div>
@@ -130,7 +130,18 @@
                         </div>
                     </div>
                     <div id="no-target-message" class="hidden">
-                        Vous n'avez pas de cible active. Le jeu est peut-être terminé ou vous êtes le dernier survivant !
+                        Y'a plus rien à faire ! (fyot)
+                    </div>
+                </div>
+
+                <!-- Leaderboard des tueurs -->
+                <div class="leaderboard-section" id="leaderboard-section">
+                    <h2>🔪 Top Killers 🔪</h2>
+                    <div class="leaderboard-container">
+                        <div id="leaderboard-list" class="leaderboard-list"></div>
+                        <div id="leaderboard-empty" class="leaderboard-empty hidden">
+                            <p>Soit le premier à tuer un fyot ! (dans le jeu hein pas en vrai...)</p>
+                        </div>
                     </div>
                 </div>
 
