--- a/client/index.html
+++ b/client/index.html
@@ -138,7 +138,8 @@
 
                 <!-- Leaderboard des tueurs -->
                 <div class="leaderboard-section" id="leaderboard-section">
-                    <h2>🔪 Top Killers 🔪</h2>
+                    <h2>🔪 Leaderboard 🔪</h2>
+                    <p id="leaderboard-remaining" class="leaderboard-remaining hidden"></p>
                     <div class="leaderboard-container">
                         <div id="leaderboard-list" class="leaderboard-list"></div>
                         <div id="leaderboard-empty" class="leaderboard-empty hidden">
@@ -151,10 +152,14 @@
                 <div class="trombi-section" id="trombi-section">
                     <h2>Trombinoscope</h2>
                     <div class="trombi-categories">
-                        <button type="button" class="trombi-category-btn active" data-category="all">Tous</button>
-                        <button type="button" class="trombi-category-btn" data-category="alive">Vivants</button>
-                        <button type="button" class="trombi-category-btn" data-category="dead">Morts</button>
-                        <button type="button" class="trombi-category-btn hidden" data-category="gaveup">Abandons</button>
+                        <!-- Catégories pour les admins -->
+                        <button type="button" class="trombi-category-btn admin-only active" data-category="all">Tous</button>
+                        <button type="button" class="trombi-category-btn admin-only" data-category="alive">Vivants</button>
+                        <button type="button" class="trombi-category-btn admin-only" data-category="dead">Morts</button>
+                        <button type="button" class="trombi-category-btn admin-only" data-category="gaveup">Abandons</button>
+                        <!-- Catégories pour les non-admins -->
+                        <button type="button" class="trombi-category-btn non-admin-only active" data-category="players">Joueurs</button>
+                        <button type="button" class="trombi-category-btn non-admin-only" data-category="admins">Admins</button>
                     </div>
                     <div class="trombi-wrapper">
                         <div id="trombi-list" class="trombi-list"></div>
@@ -165,36 +170,6 @@
                     <p id="trombi-empty" class="trombi-empty hidden">Pas encore de joueurs à afficher.</p>
                     <p id="trombi-error" class="trombi-error hidden">Impossible de charger le trombinoscope pour le moment.</p>
                 </div>
-
-                    <div class="admin-overview hidden" id="admin-overview">
-                        <div class="admin-overview-header">
-                            <h2>Vue complète des joueurs (admin)</h2>
-                            <button id="admin-refresh" class="btn btn-secondary btn-small">Actualiser</button>
-                        </div>
-                        <div class="admin-categories">
-                            <button type="button" class="admin-category-btn active" data-admin-category="all">Tous</button>
-                            <button type="button" class="admin-category-btn" data-admin-category="alive">Vivants</button>
-                            <button type="button" class="admin-category-btn" data-admin-category="dead">Morts</button>
-                            <button type="button" class="admin-category-btn" data-admin-category="gaveup">Abandonnés</button>
-                        </div>
-                        <div class="admin-table-container">
-                            <table class="admin-table">
-                                <thead>
-                                    <tr>
-                                    <th class="sortable" data-sort-key="nickname">Joueur</th>
-                                    <th>Statut</th>
-                                    <th class="sortable" data-sort-key="target">Cible actuelle</th>
-                                    <th>Action actuelle</th>
-                                    <th class="sortable" data-sort-key="initial_target">Cible initiale</th>
-                                    <th>Action initiale</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="admin-overview-body"></tbody>
-                            </table>
-                        </div>
-                        <div id="admin-overview-empty" class="admin-overview-empty hidden">Aucune donnée disponible.</div>
-                        <div id="admin-overview-error" class="admin-overview-error hidden">Lecture des données impossible pour le moment.</div>
-                    </div>
             </div>
         </div>
         
