--- a/client/index.html
+++ b/client/index.html
@@ -153,13 +153,13 @@
                     <h2>Trombinoscope</h2>
                     <div class="trombi-categories">
                         <!-- Catégories pour les admins -->
-                        <button type="button" class="trombi-category-btn admin-only active" data-category="all">Tous</button>
-                        <button type="button" class="trombi-category-btn admin-only" data-category="alive">Vivants</button>
-                        <button type="button" class="trombi-category-btn admin-only" data-category="dead">Morts</button>
-                        <button type="button" class="trombi-category-btn admin-only" data-category="gaveup">Abandons</button>
+                        <button type="button" class="trombi-category-btn admin-only active hidden" data-category="all">Tous</button>
+                        <button type="button" class="trombi-category-btn admin-only hidden" data-category="alive">Vivants</button>
+                        <button type="button" class="trombi-category-btn admin-only hidden" data-category="dead">Morts</button>
+                        <button type="button" class="trombi-category-btn admin-only hidden" data-category="gaveup">Abandons</button>
                         <!-- Catégories pour les non-admins -->
-                        <button type="button" class="trombi-category-btn non-admin-only active" data-category="players">Joueurs</button>
-                        <button type="button" class="trombi-category-btn non-admin-only" data-category="admins">Admins</button>
+                        <button type="button" class="trombi-category-btn non-admin-only active hidden" data-category="players">Joueurs</button>
+                        <button type="button" class="trombi-category-btn non-admin-only hidden" data-category="admins">Admins</button>
                     </div>
                     <div class="trombi-wrapper">
                         <div id="trombi-list" class="trombi-list"></div>
