--- a/client/index.html
+++ b/client/index.html
@@ -143,7 +143,7 @@
 
                 <!-- Leaderboard des tueurs -->
                 <div class="leaderboard-section" id="leaderboard-section">
-                    <h2>🔪 Leaderboard killers 🔪</h2>
+                    <h2>🔪 Leaderboard 🔪</h2>
                     <p class="alive-count" id="leaderboard-remaining">Il reste plus que <strong>X joueurs vivants</strong></p>
                     <div class="leaderboard-container">
                         <div id="leaderboard-list" class="leaderboard-list"></div>
